# py_ds_hw_3

./: pyproject.toml
py_ds_hw_3/: __init__.py  items.py  pipelines.py  settings.py
py_ds_hw_3/spider/: spider.py
