[tool.poetry]
name = "py-ds-hw-3"
version = "0.1.0"
description = ""
authors = ["Petrov <rpm10b@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.1.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
scrapy = "^2.11.1"

[tool.poetry.scripts]
start = "py_ds_hw_3.__init__:init"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
